1ra actividad Creacion Entorno

--- a/beginner/1_environment/index.html
+++ b/beginner/1_environment/index.html
@@ -53,6 +53,16 @@
     <script>
         // Comment
         console.log("Hello World");
+        //Primero
+        console.log("Yo soy Manuel!");
+        
+        //Segundo
+        var x = 10;
+        var y = 5;
+        var z = x + y
+        console.log(x);
+        console.log(y);
+        console.log(z);
     </script>
 </body>
 
