--- a/beginner/1_environment/index.html
+++ b/beginner/1_environment/index.html
@@ -53,10 +53,10 @@
     <script>
         // Comment
         console.log("Hello World");
-        //Primero
+        //1. Consola de desarrollador
         console.log("Yo soy Manuel!");
         
-        //Segundo
+        //3. Siguientes pasos
         var x = 10;
         var y = 5;
         var z = x + y
